--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "npm install && bower install",
+    "test": "karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
